// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`immutable-data > typescript > options > ignoreImmediateMutation > reports immediately mutation when disabled 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 17,
      "endLine": 1,
      "line": 1,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 20,
      "endLine": 2,
      "line": 2,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 25,
      "endLine": 3,
      "line": 3,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 34,
      "endLine": 4,
      "line": 4,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "[0, 1, 2].sort();
new Array(5).sort();
Array.of(0, 1, 2).sort();
Array.from({ length: 10 }).sort();",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 17,
          "endLine": 1,
          "line": 1,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 20,
          "endLine": 2,
          "line": 2,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 25,
          "endLine": 3,
          "line": 3,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 34,
          "endLine": 4,
          "line": 4,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "[0, 1, 2].sort();
new Array(5).sort();
Array.of(0, 1, 2).sort();
Array.from({ length: 10 }).sort();",
    },
  ],
}
`;

exports[`immutable-data > typescript > options > ignoreNonConstDeclarations > reports variables declared as const 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 2,
      "line": 2,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "AssignmentExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 3,
      "line": 3,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "UpdateExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 14,
      "endLine": 4,
      "line": 4,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "UnaryExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 24,
      "endLine": 5,
      "line": 5,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 6,
      "line": 6,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 7,
      "line": 7,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 8,
      "line": 8,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 14,
      "endLine": 9,
      "line": 9,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 10,
      "line": 10,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 11,
      "endLine": 11,
      "line": 11,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 20,
      "endLine": 12,
      "line": 12,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 15,
      "endLine": 13,
      "line": 13,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "const arr = [0, 1];
arr[0] += 1;
arr[1]++;
delete arr[0];
arr.copyWithin(0, 1, 2);
arr.fill(3);
arr.pop();
arr.push(3);
arr.reverse();
arr.shift();
arr.sort();
arr.splice(0, 1, 9);
arr.unshift(6);",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 2,
          "line": 2,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 3,
          "line": 3,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "UpdateExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 14,
          "endLine": 4,
          "line": 4,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "UnaryExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 24,
          "endLine": 5,
          "line": 5,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 6,
          "line": 6,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 7,
          "line": 7,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 8,
          "line": 8,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 14,
          "endLine": 9,
          "line": 9,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 10,
          "line": 10,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 11,
          "endLine": 11,
          "line": 11,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 20,
          "endLine": 12,
          "line": 12,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 15,
          "endLine": 13,
          "line": 13,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "const arr = [0, 1];
arr[0] += 1;
arr[1]++;
delete arr[0];
arr.copyWithin(0, 1, 2);
arr.fill(3);
arr.pop();
arr.push(3);
arr.reverse();
arr.shift();
arr.sort();
arr.splice(0, 1, 9);
arr.unshift(6);",
    },
  ],
}
`;

exports[`immutable-data > typescript > report mutating array methods 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 22,
      "endLine": 2,
      "line": 2,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 3,
      "line": 3,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 8,
      "endLine": 4,
      "line": 4,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 5,
      "line": 5,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 6,
      "line": 6,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 7,
      "line": 7,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 8,
      "line": 8,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 18,
      "endLine": 9,
      "line": 9,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 13,
      "endLine": 10,
      "line": 10,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 27,
      "endLine": 12,
      "line": 12,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 15,
      "endLine": 13,
      "line": 13,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 13,
      "endLine": 14,
      "line": 14,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 15,
      "endLine": 15,
      "line": 15,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 17,
      "endLine": 16,
      "line": 16,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 15,
      "endLine": 17,
      "line": 17,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 14,
      "endLine": 18,
      "line": 18,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 23,
      "endLine": 19,
      "line": 19,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 18,
      "endLine": 20,
      "line": 20,
      "message": "Modifying an array is not allowed.",
      "messageId": "array",
      "nodeType": "CallExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "var x = [5, 6];
x.copyWithin(0, 1, 2);
x.fill(3);
x.pop();
x.push(3);
x.reverse();
x.shift();
x.sort();
x.splice(0, 1, 9);
x.unshift(6);
var y = [{ z: [3, 7] }];
y[0].z.copyWithin(0, 1, 2);
y[0].z.fill(3);
y[0].z.pop();
y[0].z.push(3);
y[0].z.reverse();
y[0].z.shift();
y[0].z.sort();
y[0].z.splice(0, 1, 9);
y[0].z.unshift(6);",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 22,
          "endLine": 2,
          "line": 2,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 3,
          "line": 3,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 8,
          "endLine": 4,
          "line": 4,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 5,
          "line": 5,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 6,
          "line": 6,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 7,
          "line": 7,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 8,
          "line": 8,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 18,
          "endLine": 9,
          "line": 9,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 13,
          "endLine": 10,
          "line": 10,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 27,
          "endLine": 12,
          "line": 12,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 15,
          "endLine": 13,
          "line": 13,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 13,
          "endLine": 14,
          "line": 14,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 15,
          "endLine": 15,
          "line": 15,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 17,
          "endLine": 16,
          "line": 16,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 15,
          "endLine": 17,
          "line": 17,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 14,
          "endLine": 18,
          "line": 18,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 23,
          "endLine": 19,
          "line": 19,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 18,
          "endLine": 20,
          "line": 20,
          "message": "Modifying an array is not allowed.",
          "messageId": "array",
          "nodeType": "CallExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "var x = [5, 6];
x.copyWithin(0, 1, 2);
x.fill(3);
x.pop();
x.push(3);
x.reverse();
x.shift();
x.sort();
x.splice(0, 1, 9);
x.unshift(6);
var y = [{ z: [3, 7] }];
y[0].z.copyWithin(0, 1, 2);
y[0].z.fill(3);
y[0].z.pop();
y[0].z.push(3);
y[0].z.reverse();
y[0].z.shift();
y[0].z.sort();
y[0].z.splice(0, 1, 9);
y[0].z.unshift(6);",
    },
  ],
}
`;

exports[`immutable-data > typescript > reports array mutations 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 3,
      "line": 3,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "AssignmentExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 14,
      "endLine": 4,
      "line": 4,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "AssignmentExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 5,
      "line": 5,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "AssignmentExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 15,
      "endLine": 6,
      "line": 6,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "AssignmentExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 7,
      "line": 7,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "UnaryExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 17,
      "endLine": 8,
      "line": 8,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "UnaryExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 7,
      "endLine": 9,
      "line": 9,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "UpdateExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 10,
      "line": 10,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "UpdateExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 7,
      "endLine": 11,
      "line": 11,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "UpdateExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 12,
      "line": 12,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "UpdateExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 13,
      "endLine": 13,
      "line": 13,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "AssignmentExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 18,
      "endLine": 14,
      "line": 14,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "AssignmentExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 13,
      "endLine": 15,
      "line": 15,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "AssignmentExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 18,
      "endLine": 16,
      "line": 16,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "nodeType": "AssignmentExpression",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "var x = [5, 6];
var y = [{ z: [3, 7] }];
x[0] = 4;
y[0].z[0] = 4;
x[0] += 1;
y[0].z[0] += 1;
delete x[0];
delete y[0].z[0];
x[0]++;
y[0].z[0]++;
--x[0];
--y[0].z[0];
if (x[0] = 2) {}
if (y[0].z[0] = 2) {}
x.length = 5;
y[0].z.length = 1;",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 3,
          "line": 3,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 14,
          "endLine": 4,
          "line": 4,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 5,
          "line": 5,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 15,
          "endLine": 6,
          "line": 6,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 7,
          "line": 7,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "UnaryExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 17,
          "endLine": 8,
          "line": 8,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "UnaryExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 7,
          "endLine": 9,
          "line": 9,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "UpdateExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 10,
          "line": 10,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "UpdateExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 7,
          "endLine": 11,
          "line": 11,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "UpdateExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 12,
          "line": 12,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "UpdateExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 13,
          "endLine": 13,
          "line": 13,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 18,
          "endLine": 14,
          "line": 14,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 13,
          "endLine": 15,
          "line": 15,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 18,
          "endLine": 16,
          "line": 16,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "nodeType": "AssignmentExpression",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "var x = [5, 6];
var y = [{ z: [3, 7] }];
x[0] = 4;
y[0].z[0] = 4;
x[0] += 1;
y[0].z[0] += 1;
delete x[0];
delete y[0].z[0];
x[0]++;
y[0].z[0]++;
--x[0];
--y[0].z[0];
if (x[0] = 2) {}
if (y[0].z[0] = 2) {}
x.length = 5;
y[0].z.length = 1;",
    },
  ],
}
`;
